diesel_compile_tests/tests/fail/copy_can_only_use_options_with_raw_variant.stderr
error[E0599]: no method named `with_format` found for struct `CopyFromQuery<table, InsertableWrapper<Vec<NewUser>>>` in the current scope
  --> tests/fail/copy_can_only_use_options_with_raw_variant.rs:49:10
   |
LL | /     diesel::copy_from(users::table)
LL | |         .from_insertable(vec![NewUser { name: "John" }])
LL | |         .with_format(CopyFormat::Csv)
   | |         -^^^^^^^^^^^ method not found in `CopyFromQuery<table, InsertableWrapper<Vec<NewUser>>>`
   | |_________|
   |
   |
   = note: the method was found for
           - `CopyFromQuery<T, pg::query_builder::copy::copy_from::CopyFrom<C, F>>`

error[E0599]: the method `load` exists for struct `CopyToQuery<table, CopyToOptions>`, but its trait bounds were not satisfied
   --> tests/fail/copy_can_only_use_options_with_raw_variant.rs:56:10
    |
54  | /     diesel::copy_to(users::table)
55  | |         .with_format(CopyFormat::Csv)
56  | |         .load::<User, _>(conn)
    | |_________-^^^^
    |
   ::: DIESEL/diesel/diesel/src/pg/query_builder/copy/copy_to.rs
    |
LL |   pub struct CopyToQuery<T, O> {
    |   ---------------------------- doesn't satisfy `_: RunQueryDsl<_>` or `_: Table`
    |
    = note: the following trait bounds were not satisfied:
            `CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: Table`
            which is required by `CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: diesel::RunQueryDsl<_>`
            `&CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: Table`
            which is required by `&CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: diesel::RunQueryDsl<_>`
            `&mut CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: Table`
            which is required by `&mut CopyToQuery<users::table, pg::query_builder::copy::copy_to::CopyToOptions>: diesel::RunQueryDsl<_>`
For more information about this error, try `rustc --explain E0599`.
